# bubot_description

./: CMakeLists.txt  README.md  package.xml  urdf.rviz
config/: joint_names_bubot_description.yaml
launch/: display.launch  gazebo.launch
meshes/: front_laser_mountpoint_link.STL  head_pitch_link.STL  head_yaw_link.STL  left_arm_elbow_roll_link.STL  left_arm_forearm_yaw_link.STL  left_arm_shoulder_pitch_link.STL  left_arm_shoulder_roll_link.STL  left_arm_shoulder_yaw_link.STL  left_arm_wrist_roll_link.STL  left_camera_link.STL  left_front_wheel_link.STL  left_gripper_link.STL  left_wheel_link.STL  rear_wheel_link.STL  right_arm_elbow_roll_link.STL  right_arm_forearm_yaw_link.STL  right_arm_shoulder_pitch_link.STL  right_arm_shoulder_roll_link.STL  right_arm_shoulder_yaw_link.STL  right_arm_wrist_roll_link.STL  right_front_wheel_link.STL  right_gripper_link.STL  right_wheel_link.STL  tray_pitch_link.STL
src/: test_axis_sub.cpp
urdf/: bubot_description.1.urdf  bubot_description.csv  bubot_description.urdf
