<package>
  <name>bubot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for bubot_description</p>
    <p>This package contains configuration data, 3D models and launch files
for bubot_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <architecture_independent />
  </export>
</package>